css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Coda', cursive;
    font-weight: 300;
    color: #311432;
    font-size: 3em;
    margin: 10px 0;
    padding: 0;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 86%;
    background: linear-gradient(160deg, #e4a0f7 0%, #b284be 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    width: 22%;
    background: #784b84;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 1.2rem;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
}

.deck .card:before{
    content: "";
    display: block;
    padding-top: 100%;  /* initial ratio of 1:1*/
}

.deck .card.open {
    transform: rotateY(0);
    background: #311432;
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
    animation-name: flip;
    animation-duration: .5s;
}
@keyframes flip {
    0% {
        transform: rotateX(0deg);
        opacity: 0;
        transition: opacity .25s ease-in-out;
        -moz-transition: opacity .25s ease-in-out;
        -webkit-transition: opacity .25s ease-in-out;
    }
    100% {
        transform: rotateX(-360deg);
        opacity: 1;
        transition: opacity .25s ease-in-out;
        -moz-transition: opacity .25s ease-in-out;
        -webkit-transition: opacity .25s ease-in-out;
    }
}

.deck .card.disabled {
    pointer-events: none;
}

.deck .card.match {
    cursor: default;
    background: #02ccba;
    font-size: 33px;
    animation-name: stretchMatch;
    animation-duration: 1.2s;
}
@keyframes stretchMatch {
    0% {
        background: #50C878;
        -webkit-transform: scale(1);
        -ms-transform: scale(1);
        transform: scale(1);
    }
    50% {
        background-color: #2E8B57;
        -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
        transform: scale(1.2);
    }
    100% {
        background: #50C878;
        -webkit-transform: scale(1);
        -ms-transform: scale(1);
        transform: scale(1);
    }
}
.deck .card.unmatch {
    animation-name: stretchUnmatch;
    animation-duration: 1.2s;
}
@keyframes stretchUnmatch {
    0% {
        background-color: #CA3433;
        -webkit-transform: scale(1);
        -ms-transform: scale(1);
        transform: scale(1);
    }
    50% {
        background-color: #b80f0a;
        -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
        transform: scale(1.2);
    }
    100% {
        background-color: #CA3433;
        -webkit-transform: scale(.9);
        -ms-transform: scale(.9);
        transform: scale(.9);
    }
}

/*
 * Styles for the Score Panel
 */

.score-panel {
    text-align: left;
    width: 86%;
    margin-bottom: 10px;
    font-size: 1.3em;
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
    color: #02ccba;
}

.score-panel .restart {
    float: right;
    cursor: pointer;
}

.score-panel .timer {
    float: right;
    margin-right: 15px;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 150px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

.modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 70%;
}

.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.modal h1 .fa {
    color: gold;
}
.close:hover, .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.summary {
    text-align: center;
    font-size: 1.2em;
}

.summary div{
    margin: 10px 0;
}

.summary div:last-of-type{
    display: inline-block;
}

.finalRating {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0;
}

.finalRating li {
    list-style: none;
    display: inline-block;
    color: #02ccba;
}

.finalMoves, .finalTime {
    font-weight: 600;
}

@media (min-width: 680px) {
    .deck {
        width: 660px;
        height: 680px;
    }

    .deck .card {
        height: 125px;
        width: 125px;
        margin-bottom: 0;
    }

    .modal-content {
        width: 500px;
    }

    .score-panel {
        width: 600px;
    }
}

